--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,6 @@
 [submodule "App"]
     path = App
     url = https://github.com/orelz890/InstaFoodies.git
-
-[submodule "server"]
+[submodule "Server"]
     path = server
     url = https://github.com/orelz890/InstaFoodies_server.git
