--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "App"]
-    path = App/App
+    path = App
     url = https://github.com/orelz890/InstaFoodies.git
 [submodule "Server"]
-    path = Server/server
+    path = server
     url = https://github.com/orelz890/InstaFoodies_server.git
