--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
     path = App
     url = https://github.com/orelz890/InstaFoodies.git
 [submodule "Server"]
-    path = Server
+    path = server
     url = https://github.com/orelz890/InstaFoodies_server.git
